# MartianEclipses

./: .gitignore  README.md  animate_slider.py  calc.py  calculations.py  feature1.py  main.py  pyproject.toml  visibility_animation.py
SatVis/: animate_slider.py  main.py
docs/: MartianEclipse.rst  animate_slider.rst  calculations.rst  conf.py  index.rst
tests/: test_calc.py  test_main.py
